# simple-scraper

./: main.py  pyproject.toml  scrape.py
