[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "doubleignorantlint"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.23"
ipdb = "^0.13.2"
[tool.poetry.dev-dependencies]
